[project]
name = "anybin2wheel"
version = "0.1.0"
description = "Package any executable to be distributed as a wheel."
authors = [
    {name = "Sergey Kolosov", email = "m17.admin@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
