[project]
name = "anybin2wheel"
version = "0.1.0"
description = "Package any executable to be distributed as a wheel."
authors = [
    {name = "Sergey Kolosov", email = "m17.admin@gmail.com"},
]
dependencies = [
    "distlib>=0.3.8",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
anybin2wheel = "anybin2wheel:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
]
